Bear minimum authentication
