# src/api/apis/TeddyCloudApi.ts
@@ -4,7 +4,7 @@
  * TeddyCloud API
  * OpenAPI specification for TeddyCloud Backend API
  *
- * The version of the OpenAPI document: 1.0.1
+ * The version of the OpenAPI document: 1.1.1
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,9 +15,9 @@
 
 import * as runtime from '../runtime';
 import type {
-    Errors,
-    OptionsList,
-    StatsList,
+  Errors,
+  OptionsList,
+  StatsList,
 } from '../models';
 import {
     ErrorsFromJSON,
@@ -27,8 +27,16 @@ import {
     StatsListFromJSON,
     StatsListToJSON,
 } from '../models';
-
 import { TagsTonieCardList, TonieCardProps } from '../../components/tonies/TonieCard';
+
+export interface ApiAuthLoginPostRequest {
+    username?: string;
+    passwordHash?: string;
+}
+
+export interface ApiAuthRefreshTokenPostRequest {
+    refreshToken?: string;
+}
 
 export interface ApiSetCloudCacheContentPostRequest {
     body: boolean;
@@ -42,7 +50,6 @@ export interface ApiUploadCertPostRequest {
  * 
  */
 export class TeddyCloudApi extends runtime.BaseAPI {
-
 
     /**
      * get all tags
@@ -69,6 +76,116 @@ export class TeddyCloudApi extends runtime.BaseAPI {
     }
 
     /**
+     * get all tags
+     */
+    async apiAuthLoginPostRaw(requestParameters: ApiAuthLoginPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<string>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const consumes: runtime.Consume[] = [
+            { contentType: 'application/x-www-form-urlencoded' },
+        ];
+        // @ts-ignore: canConsumeForm may be unused
+        const canConsumeForm = runtime.canConsumeForm(consumes);
+
+        let formParams: { append(param: string, value: any): any };
+        let useForm = false;
+        if (useForm) {
+            formParams = new FormData();
+        } else {
+            formParams = new URLSearchParams();
+        }
+
+        if (requestParameters.username !== undefined) {
+            formParams.append('username', requestParameters.username as any);
+        }
+
+        if (requestParameters.passwordHash !== undefined) {
+            formParams.append('passwordHash', requestParameters.passwordHash as any);
+        }
+
+        const response = await this.request({
+            path: `/api/auth/login`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: formParams,
+        }, initOverrides);
+
+        if (this.isJsonMime(response.headers.get('content-type'))) {
+            return new runtime.JSONApiResponse<string>(response);
+        } else {
+            return new runtime.TextApiResponse(response) as any;
+        }
+    }
+
+    /**
+     * Login
+     */
+    async apiAuthLoginPost(requestParameters: ApiAuthLoginPostRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<string> {
+        const response = await this.apiAuthLoginPostRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Refresh JWT token
+     */
+    async apiAuthRefreshTokenPostRaw(requestParameters: ApiAuthRefreshTokenPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<string>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const consumes: runtime.Consume[] = [
+            { contentType: 'application/x-www-form-urlencoded' },
+        ];
+        // @ts-ignore: canConsumeForm may be unused
+        const canConsumeForm = runtime.canConsumeForm(consumes);
+
+        let formParams: { append(param: string, value: any): any };
+        let useForm = false;
+        if (useForm) {
+            formParams = new FormData();
+        } else {
+            formParams = new URLSearchParams();
+        }
+
+        if (requestParameters.refreshToken !== undefined) {
+            formParams.append('refreshToken', requestParameters.refreshToken as any);
+        }
+
+        const response = await this.request({
+            path: `/api/auth/refresh-token`,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: formParams,
+        }, initOverrides);
+
+        if (this.isJsonMime(response.headers.get('content-type'))) {
+            return new runtime.JSONApiResponse<string>(response);
+        } else {
+            return new runtime.TextApiResponse(response) as any;
+        }
+    }
+
+    /**
+     * Refresh JWT token
+     */
+    async apiAuthRefreshTokenPost(requestParameters: ApiAuthRefreshTokenPostRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<string> {
+        const response = await this.apiAuthRefreshTokenPostRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
      * get all options
      */
     async apiGetIndexGetRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<OptionsList>> {
@@ -76,6 +193,14 @@ export class TeddyCloudApi extends runtime.BaseAPI {
 
         const headerParameters: runtime.HTTPHeaders = {};
 
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
         const response = await this.request({
             path: `/api/getIndex`,
             method: 'GET',
@@ -99,7 +224,7 @@ export class TeddyCloudApi extends runtime.BaseAPI {
      */
     async apiSetCloudCacheContentPostRaw(requestParameters: ApiSetCloudCacheContentPostRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<void>> {
         if (requestParameters.body === null || requestParameters.body === undefined) {
-            throw new runtime.RequiredError('body', 'Required parameter requestParameters.body was null or undefined when calling apiSetCloudCacheContentPost.');
+            throw new runtime.RequiredError('body','Required parameter requestParameters.body was null or undefined when calling apiSetCloudCacheContentPost.');
         }
 
         const queryParameters: any = {};
@@ -108,6 +233,14 @@ export class TeddyCloudApi extends runtime.BaseAPI {
 
         headerParameters['Content-Type'] = 'text/plain';
 
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
         const response = await this.request({
             path: `/api/set/cloud.cacheContent`,
             method: 'POST',
@@ -134,6 +267,14 @@ export class TeddyCloudApi extends runtime.BaseAPI {
 
         const headerParameters: runtime.HTTPHeaders = {};
 
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
         const response = await this.request({
             path: `/api/stats`,
             method: 'GET',
@@ -160,6 +301,14 @@ export class TeddyCloudApi extends runtime.BaseAPI {
 
         const headerParameters: runtime.HTTPHeaders = {};
 
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
         const response = await this.request({
             path: `/api/triggerWriteConfig`,
             method: 'GET',
@@ -190,6 +339,14 @@ export class TeddyCloudApi extends runtime.BaseAPI {
 
         const headerParameters: runtime.HTTPHeaders = {};
 
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
         const consumes: runtime.Consume[] = [
             { contentType: 'multipart/form-data' },
         ];
